--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.19.2",
     "jquery": "^1.9.1",
     "react": "^16.13.1",
+    "react-burger-menu": "^2.7.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
